# dimenRed

./: CMakeLists.txt  DiscriminantCases.h  MatricOP.h  ReadImage.cpp  ReadImageHeader.cpp  Threshold.cpp  WriteImage.cpp  image.cpp  image.h  jacobi.cpp  jacobi.h  lamdafunctions.h  main.cpp  matrixOperations.cpp  matrixOperations.h  matrixfunctions.cpp  matrixfunctions.h  worked.cpp
